[workspace.package]
license = "MIT"
version = "24.9.19"

[workspace.dependencies]
ego-tree = "0.6.2"

[workspace]
members = ["core"]
resolver = "2"

[package]
name = "linutil"
description = "Chris Titus Tech's Linux Toolbox - Linutil is a distro-agnostic toolbox designed to simplify everyday Linux tasks."
documentation = "https://christitustech.github.io/linutil"
readme = "README.md"
edition = "2021"
license = "MIT"
repository = "https://github.com/ChrisTitusTech/linutil"
version.workspace = true
include = [
    "src/*.rs",
    "Cargo.toml",
    "build.rs",
]
build = "build.rs"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
crossterm = "0.28.1"
ego-tree = { workspace = true }
oneshot = "0.1.8"
portable-pty = "0.8.1"
ratatui = "0.28.1"
tui-term = "0.1.12"
unicode-width = "0.1.13"
linutil_core = { path = "./core", version = "24.9.19" }

[build-dependencies]
chrono = "0.4.33"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[[bin]]
name = "linutil"
path = "src/main.rs"
