[workspace.package]
license = "MIT"
version = "24.9.28"

[workspace.dependencies]
ego-tree = "0.6.2"

[workspace]
members = ["tui", "core"]
resolver = "2"

[patch.crates-io]
vt100 = { git = "https://github.com/ChrisTitusTech/vt100-rust" }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
