[workspace.package]
license = "MIT"
version = "24.9.28"
edition = "2021"

[workspace]
members = ["tui", "core", "xtask"]
default-members = ["tui", "core"]
resolver = "2"

[patch.crates-io]
vt100 = { git = "https://github.com/ChrisTitusTech/vt100-rust" }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
